--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,6 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           envs: ECR_REGISTRY,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,AWS_SESSION_TOKEN,AWS_REGION
           script: |
-            # 1. Instalar Docker en Amazon Linux (si no existe)
             if ! command -v docker &> /dev/null; then
                 sudo yum update -y
                 sudo yum install -y docker
@@ -61,7 +60,6 @@ jobs:
                 sudo usermod -a -G docker ec2-user
             fi
             
-            # 2. Login en ECR
             aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
             aws configure set aws_session_token $AWS_SESSION_TOKEN
@@ -71,11 +69,10 @@ jobs:
             
             export ECR_REGISTRY=$ECR_REGISTRY
             
-            # 3. Preparar carpeta
             mkdir -p app-ventas
             cd app-ventas
             
-            # 4. Crear docker-compose (Con tus datos actualizados)
+            # AQUI ESTABA EL ERROR: FALTABAN LAS CREDENCIALES
             cat <<EOF > docker-compose.yml
             version: '3.8'
             services:
@@ -83,6 +80,9 @@ jobs:
                 image: $ECR_REGISTRY/ms-catalogos:latest
                 ports: ["3001:8080"]
                 environment:
+                  - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+                  - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+                  - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
                   - AWS_REGION=us-east-1
                   - TABLE_CLIENTES=Clientes-Prod
                   - TABLE_PRODUCTOS=Productos-Prod
@@ -94,13 +94,15 @@ jobs:
                 image: $ECR_REGISTRY/ms-ventas:latest
                 ports: ["3002:8080"]
                 environment:
+                  - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+                  - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+                  - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
                   - AWS_REGION=us-east-1
                   - TABLE_CLIENTES=Clientes-Prod
                   - TABLE_PRODUCTOS=Productos-Prod
                   - TABLE_DOMICILIOS=Domicilios-Prod
                   - TABLE_NOTAS_VENTA=NotasVenta-Prod
                   - TABLE_NOTA_CONTENIDO=NotaContenido-Prod
-                  # TUS DATOS:
                   - BUCKET_NAME=examen-2-745730
                   - SNS_TOPIC_NOTIFICACIONES=arn:aws:sns:us-east-1:187758670772:NotificacionesVentas
                   - ENVIRONMENT=PROD
@@ -110,16 +112,16 @@ jobs:
                 image: $ECR_REGISTRY/ms-notificaciones:latest
                 ports: ["3003:8080"]
                 environment:
+                  - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+                  - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+                  - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
                   - AWS_REGION=us-east-1
-                  # TU CORREO:
                   - EMAIL_REMITENTE=juanpablo.conquistador@gmail.com
-                  # Modo Simulación (cámbialo a false si logras arreglar permisos SES)
                   - SIMULATE_EMAIL=true
                   - ENVIRONMENT=PROD
                   - SERVICE_NAME=NotificacionesService
             EOF
             
-            # 5. Desplegar
             docker compose down || true
             docker compose pull
             docker compose up -d
