--- a/ms-ventas/package.json
+++ b/ms-ventas/package.json
@@ -7,9 +7,10 @@
     "express": "^4.18.2",
     "uuid": "^9.0.0",
     "pdfkit": "^0.13.0",
+    "aws-sdk": "^2.1000.0", 
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
     "@aws-sdk/client-s3": "^3.0.0",
-    "@aws-sdk/client-sns": "^3.0.0"
+    "@aws-sdk/client-sns": "^3.0.0" 
   }
 }
